# maqam-cheatsheet

./: .gitignore  Justfile  README.md  download.py  maqamat.py  pyproject.toml  requirements.txt  supervisord.conf  tasks  test_maqamat.py
data/: ajnas.csv  maqamat.csv
data/locale/ar/LC_MESSAGES/: translations.po
data/locale/en/LC_MESSAGES/: maqam.po  translations.po
data/locale/he/LC_MESSAGES/: translations.po
locale/ar/LC_MESSAGES/: index.po  maqam.po
locale/he/LC_MESSAGES/: maqam.po
maqam-pages/: download.py  out.html
static/: index.html  index.js  style.css
static/js/: index.js  tsconfig.json
templates/: index.html  interval-tag.html  jins-tag.html  maqam-tag.html
