[project]
name = "maqamat"
description = "time to cheat"
version = "0.0.1"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest"]

[tool.ruff]
line-length = 79

[tool.mypy]
disable_error_code = ["attr-defined"]
strict = true

[tool.black]
line-length = 79

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
