[project]
name = "maqamat"
description = "time to cheat"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = ["jinja2"]

[project.optional-dependencies]
dev = ["pytest", "types-jinja2"]

[tool.ruff]
line-length = 80

[tool.mypy]
disable_error_code = ["attr-defined"]
strict = true

[tool.black]
line-length = 80

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
